<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ProgressBar
            android:visibility="gone"
            tools:visibility="visible"
            android:theme="@style/AppTheme.ProgressbarColor"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loadingView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:visibility="gone"
            tools:visibility="visible"
            android:id="@+id/connectionErrorView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                style="@style/AppTheme.Title.Bold"
                android:text="@string/connection_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/hor_guide"
                app:layout_constraintHorizontal_bias="0.497"
                android:id="@+id/textView"/>
        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/hor_guide"
                app:layout_constraintGuide_percent="0.4"
                android:orientation="horizontal"/>

        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ver_guide"
                app:layout_constraintGuide_percent="0.15"
                android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ver_guide2"
                app:layout_constraintGuide_percent="0.85"
                android:orientation="vertical"/>

        <TextView
                android:textAlignment="center"
                android:textSize="18sp"
                style="@style/AppTheme.Text.Secondary"
                android:text="@string/connection_error_full_msg"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="@+id/ver_guide"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                android:id="@+id/textView2"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toStartOf="@+id/ver_guide2" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"/>


        <com.google.android.material.button.MaterialButton
                android:text="@string/retry"
                android:id="@+id/retryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintHorizontal_bias="0.498"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>